update the first section with markdowns and add code to Invesigating the Bar Coupons

--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -340,6 +340,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### I like to dissect my data with unique(), nunique(), and groupby()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -388,14 +395,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### the car and age columns appear to have unusuable data\n",
+    "###### I will keep those values until I work on the assignment a little bit\n",
+    "###### and find a reason to update them\n",
+    "\n",
+    "###### the car column contains nan\n",
+    "###### this is a problem further in the assignment because without it the count = 0\n",
+    "###### let's replace NoN with \"four-wheels\" and see what happens"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the car and age columns appear to have unusuable data\n",
-    "# I will keep those values until I work on the assignment a little bit\n",
-    "# and find a reason to update them"
+    "data[\"car\"] = data[\"car\"].fillna(\"four-wheels\")"
    ]
   },
   {
@@ -404,6 +422,15 @@
    "source": [
     "4. What proportion of the total observations chose to accept the coupon? \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### create a variable to hold the count of accepted coupons and total number of coupons\n",
+    "#####  then divide accepted coupons by total number of coupons\n",
+    "##### and format the number to display a percentage"
    ]
   },
   {
@@ -434,6 +461,13 @@
    "metadata": {},
    "source": [
     "5. Use a bar plot to visualize the `coupon` column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### this is easy.  use .plot(kind='bar') to produce a chart for the coupon column"
    ]
   },
   {
@@ -471,6 +505,14 @@
    "metadata": {},
    "source": [
     "6. Use a histogram to visualize the temperature column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### this is easy too.  use .plot(kind='hist') to produce a chart for the temperature column\n",
+    "##### let's set bins=3 to make the chart easier to read"
    ]
   },
   {
@@ -833,10 +875,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y</th>\n",
+       "      <th>Bar</th>\n",
+       "      <th>car</th>\n",
+       "      <th>age</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"38\" valign=\"top\">1</th>\n",
+       "      <th rowspan=\"8\" valign=\"top\">1~3</th>\n",
+       "      <th rowspan=\"8\" valign=\"top\">four-wheels</th>\n",
+       "      <th>21</th>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50plus</th>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>below21</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"7\" valign=\"top\">4~8</th>\n",
+       "      <th rowspan=\"7\" valign=\"top\">four-wheels</th>\n",
+       "      <th>21</th>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50plus</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">gt8</th>\n",
+       "      <th>do not drive</th>\n",
+       "      <th>26</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">four-wheels</th>\n",
+       "      <th>21</th>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50plus</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>below21</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"9\" valign=\"top\">less1</th>\n",
+       "      <th>Scooter and motorcycle</th>\n",
+       "      <th>26</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">four-wheels</th>\n",
+       "      <th>21</th>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50plus</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>below21</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"8\" valign=\"top\">never</th>\n",
+       "      <th rowspan=\"8\" valign=\"top\">four-wheels</th>\n",
+       "      <th>21</th>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50plus</th>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>below21</th>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Y\n",
+       "Y Bar   car                    age        \n",
+       "1 1~3   four-wheels            21       68\n",
+       "                               26       69\n",
+       "                               31       46\n",
+       "                               36       14\n",
+       "                               41       18\n",
+       "                               46        6\n",
+       "                               50plus   34\n",
+       "                               below21   2\n",
+       "  4~8   four-wheels            21       33\n",
+       "                               26       47\n",
+       "                               31       14\n",
+       "                               36        6\n",
+       "                               41        3\n",
+       "                               46        6\n",
+       "                               50plus    8\n",
+       "  gt8   do not drive           26        2\n",
+       "        four-wheels            21       13\n",
+       "                               26       13\n",
+       "                               31        3\n",
+       "                               50plus    3\n",
+       "                               below21   2\n",
+       "  less1 Scooter and motorcycle 26        1\n",
+       "        four-wheels            21       64\n",
+       "                               26       36\n",
+       "                               31       38\n",
+       "                               36       24\n",
+       "                               41       46\n",
+       "                               46       16\n",
+       "                               50plus   22\n",
+       "                               below21   6\n",
+       "  never four-wheels            21       33\n",
+       "                               26       22\n",
+       "                               31       24\n",
+       "                               36       17\n",
+       "                               41        8\n",
+       "                               46       10\n",
+       "                               50plus   16\n",
+       "                               below21  26"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accepted_bar_coupons = bar_coupons[bar_coupons[\"Y\"]==1]\n",
+    "accepted_bar_coupons.groupby(['Y','Bar','car','age'])[['Y']].count()\n",
+    "#accepted_bar_coupons.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "destination             292\n",
+       "passanger               292\n",
+       "weather                 292\n",
+       "temperature             292\n",
+       "time                    292\n",
+       "coupon                  292\n",
+       "expiration              292\n",
+       "gender                  292\n",
+       "age                     292\n",
+       "maritalStatus           292\n",
+       "has_children            292\n",
+       "education               292\n",
+       "occupation              292\n",
+       "income                  292\n",
+       "car                     292\n",
+       "Bar                     292\n",
+       "CoffeeHouse             287\n",
+       "CarryAway               287\n",
+       "RestaurantLessThan20    292\n",
+       "Restaurant20To50        286\n",
+       "toCoupon_GEQ5min        292\n",
+       "toCoupon_GEQ15min       292\n",
+       "toCoupon_GEQ25min       292\n",
+       "direction_same          292\n",
+       "direction_opp           292\n",
+       "Y                       292\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driversOverTwentyFive = accepted_bar_coupons.query(\"age in ['46', '26', '31', '41', '50plus', '36']\")\n",
+    "#driversOverTwentyFive.groupby(['Y','Bar','car','age'])[['Y']].count()\n",
+    "barMoreThanOnceOver21 = driversOverTwentyFive.query(\"Bar in ['1~3','gt8', '4~8']\")\n",
+    "barMoreThanOnceOver21.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "destination             114\n",
+       "passanger               114\n",
+       "weather                 114\n",
+       "temperature             114\n",
+       "time                    114\n",
+       "coupon                  114\n",
+       "expiration              114\n",
+       "gender                  114\n",
+       "age                     114\n",
+       "maritalStatus           114\n",
+       "has_children            114\n",
+       "education               114\n",
+       "occupation              114\n",
+       "income                  114\n",
+       "car                     114\n",
+       "Bar                     114\n",
+       "CoffeeHouse             114\n",
+       "CarryAway               111\n",
+       "RestaurantLessThan20    114\n",
+       "Restaurant20To50        113\n",
+       "toCoupon_GEQ5min        114\n",
+       "toCoupon_GEQ15min       114\n",
+       "toCoupon_GEQ25min       114\n",
+       "direction_same          114\n",
+       "direction_opp           114\n",
+       "Y                       114\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driversUnderTwentyFive = accepted_bar_coupons.query(\"age in ['21']\")\n",
+    "#driversUnderTwentyFive.groupby(['Y','Bar'])[['Y']].count()\n",
+    "barMoreThanOnceUnder25 = driversUnderTwentyFive.query(\"Bar in ['1~3','gt8', '4~8']\")\n",
+    "barMoreThanOnceUnder25.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'39.04%'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if I keep the code to replace NoN with \"four-wheels\"\n",
+    "# there are LOTS of data to use in this problem\n",
+    "# I'm not crazy about this idea, but it's purely academic so what the heck!\n",
+    "countYOver21 = barMoreThanOnceOver21['Y'].count()\n",
+    "countYUnder25 = barMoreThanOnceUnder25['Y'].count()\n",
+    "'{:.2%}'.format(countYUnder25/countYOver21)"
+   ]
   },
   {
    "cell_type": "markdown",
