update the markdown and code for Invesigating the Bar Coupons

--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -585,8 +585,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### create a new variable to hold the bar coupons"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +798,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,8 +816,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### count the number of accepted bar coupons\n",
+    "##### count the total number of bar coupons\n",
+    "##### divide the number of accepted bar coupons by the total number of bar coupons\n",
+    "##### and format the number to display a percentage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +836,7 @@
        "'41.00%'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,8 +859,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### create a variable to contain the number of people who accepted a coupond and went to a bar 3 or fewer times a month\n",
+    "##### create a variable to contain the number of people who accepted a coupond and went to a bar more than 3 times a month\n",
+    "##### divide the previous two numbers\n",
+    "##### and format the number to display a percentage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -852,15 +879,15 @@
        "'435.29%'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countBarThreeOrLess = bar_coupons[(bar_coupons.coupon == 'Bar') & (bar_coupons.Bar.isin(['never', 'less1', '1~3'])) & (bar_coupons.Y == 1)][\"coupon\"].count() # \n",
+    "countBarThreeOrLess = bar_coupons[(bar_coupons.Bar.isin(['never', 'less1', '1~3'])) & (bar_coupons.Y == 1)][\"coupon\"].count() # \n",
     "#countBarThreeOrLess #666\n",
-    "countBarMoreThanThree = bar_coupons[(bar_coupons.coupon == 'Bar') & (bar_coupons.Bar.isin(['gt8', '4~8']) ) & (bar_coupons.Y == 1)][\"coupon\"].count() # 827\n",
+    "countBarMoreThanThree = bar_coupons[(bar_coupons.Bar.isin(['gt8', '4~8']) ) & (bar_coupons.Y == 1)][\"coupon\"].count() # 827\n",
     "#countBarMoreThanThree # 153\n",
     "# Bar ['never', 'less1', '1~3', 'gt8', nan, '4~8']\n",
     "'{:.2%}'.format(countBarThreeOrLess/countBarMoreThanThree)"
@@ -874,8 +901,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### this problem appears to be slightly complicated and somewhat ambiguous\n",
+    "##### what the heck do they mean by \"the all others\"?\n",
+    "##### let's break down the data and figure out what to expect"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### start by creating a variable to contain the number of accepted coupons\n",
+    "###### I should have done this before the previous questions, but I'll leave them alone since they're are working\n",
+    "##### groupby() will give a picture of what's in the dataframe.\n",
+    "##### here's where changing NaN in the car column becomes significant\n",
+    "##### without \"four-wheels\" this data there is nothing to calculate\n",
+    "##### I'm not crazy about this idea, but it's more fun to have more data to play with!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1173,7 @@
        "                               below21  26"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,6 +1182,14 @@
     "accepted_bar_coupons = bar_coupons[bar_coupons[\"Y\"]==1]\n",
     "accepted_bar_coupons.groupby(['Y','Bar','car','age'])[['Y']].count()\n",
     "#accepted_bar_coupons.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### create a variable to contain the drivers who accepted a coupon, are over 25\n",
+    "##### using the previous variable create another one to contain those who visited a bar more than once a month"
    ]
   },
   {
@@ -1187,6 +1243,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### create a variable to contain the drivers who accepted a coupon and under 25\n",
+    "##### we can skip \"below21\", since they can't legal drink\n",
+    "##### using the previous variable create another one to contain those who visited a bar more than once a month"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -1235,28 +1302,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### if I keep the code to replace NoN with \"four-wheels\"\n",
+    "##### there's LOTS of data to use in this problem\n",
+    "##### again I'm not crazy about this idea, but it's purely academic so what the heck!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'39.04%'"
+       "'256.14%'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# if I keep the code to replace NoN with \"four-wheels\"\n",
-    "# there are LOTS of data to use in this problem\n",
-    "# I'm not crazy about this idea, but it's purely academic so what the heck!\n",
     "countYOver21 = barMoreThanOnceOver21['Y'].count()\n",
     "countYUnder25 = barMoreThanOnceUnder25['Y'].count()\n",
-    "'{:.2%}'.format(countYUnder25/countYOver21)"
+    "'{:.2%}'.format(countYOver21/countYUnder25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### it appears that the bar coupons are 2.5 times more popular with the over 21 crowd than the under 25 crowd"
    ]
   },
   {
