--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -404,7 +404,9 @@
     "\n",
     "###### the car column contains nan\n",
     "###### this is a problem further in the assignment because without it the count = 0\n",
-    "###### let's replace NoN with \"four-wheels\" and see what happens"
+    "###### let's replace NoN with \"four-wheels\" and see what happens\n",
+    "\n",
+    "##### column \"passanger\" is misspelled!  let's rename it to \"passenger\" and delete \"passanger\""
    ]
   },
   {
@@ -923,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +934,7 @@
        "827"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,8 +999,8 @@
    "source": [
     "driversOverTwentyFive = accepted_bar_coupons.query(\"age in ['46', '26', '31', '41', '50plus', '36']\")\n",
     "#driversOverTwentyFive.groupby(['Y','Bar','car','age'])[['Y']].count()\n",
-    "barMoreThanOnceOver21 = driversOverTwentyFive.query(\"Bar in ['1~3','gt8', '4~8']\")\n",
-    "barMoreThanOnceOver21.count()"
+    "barMoreThanOnceOver25 = driversOverTwentyFive.query(\"Bar in ['1~3','gt8', '4~8']\")\n",
+    "barMoreThanOnceOver25.count()"
    ]
   },
   {
@@ -1029,7 +1031,7 @@
     }
    ],
    "source": [
-    "countYOver21 = barMoreThanOnceOver21['Y'].count()\n",
+    "countYOver21 = barMoreThanOnceOver25['Y'].count()\n",
     "countAllYs = accepted_bar_coupons['Y'].count()\n",
     "theAllOthers = countAllYs-countYOver21\n",
     "'{:.2%}'.format(countYOver21/theAllOthers)"
@@ -1049,10 +1051,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Y</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>410</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Y\n",
+       "Y     \n",
+       "0  186\n",
+       "1  410"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# data[\"passanger\"].unique()\n",
+    "#['Alone', 'Friend(s)', 'Kid(s)', 'Partner']\n",
+    "#data.groupby(['occupation'])['occupation'].count()\n",
+    "#barMoreThanOnce = bar_coupons.query(\"Bar in ['1~3','gt8', '4~8']\")\n",
+    "#barMoreThanOnce.head()\n",
+    "#barMoreThanOnce.groupby([\"passanger\",\"occupation\"])[[\"passanger\",\"occupation\"]].count()\n",
+    "#barMoreThanOnce.groupby([\"Y\"])[[\"Y\"]].count()\n",
+    "#barMoreThanOnce[[\"Y\"]].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'199.64%'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "barMoreThanOnce = bar_coupons.query(\"Bar in ['1~3','gt8', '4~8']\")\n",
+    "barMoreThanOnceOver25NoKids = barMoreThanOnce.query(\"passanger in ['Alone', 'Friend(s)', 'Partner']\")\n",
+    "#barMoreThanOnceOver25NoKids.groupby(['occupation'])['occupation'].count()\n",
+    "filterOccupations = barMoreThanOnceOver25NoKids.query(\"occupation not in ['Farming Fishing & Forestry']\")\n",
+    "#filterOccupations.groupby(['occupation'])['occupation'].count()\n",
+    "countFilteredOccupationY = filterOccupations['Y'].count()\n",
+    "theOtherOthers = countAllYs-countFilteredOccupationY # 827 - 551 = 276\n",
+    "'{:.2%}'.format(countFilteredOccupationY/theOtherOthers) # 551/276 = 1.99637"
+   ]
   },
   {
    "cell_type": "markdown",
